HACKING: Update release cheat-sheet
(We no longer have the duplicate variables.)

--- a/HACKING
+++ b/HACKING
@@ -25,12 +25,7 @@ To work with a different scenario like ./molecule/golang, use "-s golang".
 
 ---How to make a release
 
-Check that the default versions of trillian, sigsum-go and log-go to be
-installed are updated in both of the following files (cf.
-https://git.glasklar.is/sigsum/admin/ansible/-/issues/17):
-
-  * roles/sigsum/defaults/main.yml
-  * roles/sigsum/meta/argument_specs.yml
+Ensure that all molecule tests pass.
 
 Update docs/docsite/rst/CHANGELOG.rst.
 
@@ -39,3 +34,4 @@ Update galaxy.yml 'version'.
 Create a signed tag:
 
     $ git tag --sign v${VERSION} -m "Release ${VERSION}"
+    $ git push --tags
