--- a/molecule/default/README
+++ b/molecule/default/README
@@ -1,5 +1,6 @@
 We test that a primary-secondary log pair can be deployed, including end-to-end
 tests like submitting checksums, requesting proofs, and verifying that these
-proofs are OK.  We also check the secondary is replacing (expected tree size).
+proofs are OK.  We also check that the secondary is actually
+replicating, by verifying expected tree size.
 
 We also do a primary-only test that makes use of the new ssh-agent things.
