--- a/HACKING
+++ b/HACKING
@@ -58,6 +58,22 @@ should include no other error or warning messages.
 
 ---How to develop with molecule
 
+Think of "molecule converge" as running ansible on a host. Multiple
+invocations of converge results in multiple runs of ansible on the
+host.
+
+Use "molecule login" to get a shell on the host.  This is, e.g.,
+helpful for debugging and interactive testing (editing a file,
+converge again, etc).
+
+Use "molecule destroy" to clean up the host.  If any container is
+lingering (podman container ls --all), use "molecule destroy --all"
+instead.
+
+Use "molecule test" to run an automated test.  Add "--destroy never"
+to keep the container in case of failure (which permits "molecule
+login").
+
 Interactive deploy, debug, deploy again, verify, and clean-up session:
 
     $ molecule converge
@@ -68,6 +84,11 @@ Interactive deploy, debug, deploy again, verify, and clean-up session:
     $ molecule destroy
 
 To work with a different scenario like ./molecule/golang, use "-s golang".
+
+Each test scenario can have its own configuration in a "scenario:"
+section in the corresponding molecule.yml file, as in for example the
+molecule/litebastion/molecule.yml file. See
+https://ansible.readthedocs.io/projects/molecule/configuration/#scenario
 
 ---How to make a release
 
