--- a/NEWS
+++ b/NEWS
@@ -1,268 +1,249 @@
-.. _ansible_collections.sigsum.ansible.docsite.changelog:
+NEWS for sigsum ansible v1.2.0
 
-=========
-CHANGELOG
-=========
+	This release adds support for deployment of transparency-log
+	witnesses.  For further details, refer to the README in
+	roles/litewitness.
 
-.. contents::
-   :local:
+	Changes:
 
-v1.2.0
-======
+	* A litewitness role has been added, along with corresponding
+	  molecule tests.
 
-This release adds support for deployment of transparency-log witnesses.  For
-further details, refer to the README in roles/litewitness.
+	* Generated systemd unit files are now placed under
+	  /etc/systemd instead of under /lib as it was before. The new
+	  location /etc/systemd has higher priority than the old
+	  location (see man systemd.unit), so users do not need to
+	  change anything.
 
-Changes
--------
+	* In the litewitness role, set RestartSec=1m in the .service
+	  file. This should help avoid giving up too early due to
+	  start rate limiting, and also avoid too frequent error
+	  messages.
 
-A litewitness role has been added, along with corresponding molecule
-tests.
+	Bug fixes:
 
-Generated systemd unit files are now placed under /etc/systemd instead
-of under /lib as it was before. The new location /etc/systemd has
-higher priority than the old location (see man systemd.unit), so users
-do not need to change anything.
+	* A problem with dependencies after reboot was solved by
+	  setting dependencies in the sigsum-agent .service file
+	  instead of in the .socket file. This fix regards the
+	  sigsum_agent role.
 
-In the litewitness role, set RestartSec=1m in the .service file. This
-should help avoid giving up too early due to start rate limiting, and
-also avoid too frequent error messages.
+NEWS for sigsum ansible v1.1.3
 
-Bug fixes
----------
+	This is a bug-fix only release.
 
-A problem with dependencies after reboot was solved by setting
-dependencies in the sigsum-agent .service file instead of in the
-.socket file. This fix regards the sigsum_agent role.
+	Bug fixes:
 
-v1.1.3
-======
+	* The sigsum_agent service now starts properly after a system
+	  reboot and the log services wait for it to do so.
 
-This is a bug-fix only release.
+NEWS for sigsum ansible v1.1.2
 
-Bug fixes
----------
+	This is a bug-fix only release.
 
-The sigsum_agent service now starts properly after a system reboot and
-the log services wait for it to do so.
+	Bug fixes:
 
+	* The runtime directory for sigsum_agent is now being created
+	  by systemd rather than by Ansible, fixing #22. sigsum_agent
+	  units are now being run by the system instance.
 
-v1.1.2
-======
+	* Tests are no longer dependent on
+          ansible.builtin.openssh_keypair.
 
-This is a bug-fix only release.
+NEWS for sigsum ansible v1.1.1
 
-Bug fixes
----------
+	This is a bug-fix only release.
 
-The runtime directory for sigsum_agent is now being created by systemd
-rather than by Ansible, fixing #22. sigsum_agent units are now being
-run by the system instance.
+	Bug fixes:
 
-Tests are no longer dependent on ansible.builtin.openssh_keypair.
+	* The dynamic handler names in the sigsum_agent role were not
+	  functioning on some systems (tasks failed).  Now static
+	  handler names are used instead.  This means it is not yet
+	  supported to configure more than one sigsum-agent per play.
 
+	* The sigsum role did not work when omitting the MYSQL root
+	  password.  This has now been fixed by using a UNIX socket
+	  instead of the default host and port.
 
-v1.1.1
-======
+	* Most configuration changes (like adding a witness or
+	  changing Trillian's logging verbosity) did not result in the
+	  appropriate service restarts.  This has now been improved
+	  while keeping the sigsum role idempotent if there are no
+	  changes.
 
-This is a bug-fix only release.
+	* The MariaDB backup scripts kept failing once they'd started
+	  to fail in a particular way. This has now been fixed.
 
-Bug fixes
----------
+NEWS for sigsum ansible v1.1.0
 
-The dynamic handler names in the sigsum_agent role were not functioning on some
-systems (tasks failed).  Now static handler names are used instead.  This means
-it is not yet supported to configure more than one sigsum-agent per play.
+	This release adds support for accessing private keys using the
+	ssh-agent protocol.  See the new sigsum-agent role for further
+	details on how to use the ssh-agent protocol for process
+	separation and private keys backed by YubiHSMs.
 
-The sigsum role did not work when omitting the MYSQL root password.  This has
-now been fixed by using a UNIX socket instead of the default host and port.
+	This release also adds support for rate-limit configurations.
+	It is off by default, but can be enabled by setting
+	sigsum_allowlist_limit >= 0.  See also the related settings
+	sigsum_allowlist_keys and sigsum_allowlist_domains.
 
-Most configuration changes (like adding a witness or changing Trillian's logging
-verbosity) did not result in the appropriate service restarts.  This has now
-been improved while keeping the sigsum role idempotent if there are no changes.
+	This release comes with some internal refactoring and includes
+	bug fixing.  Most notably, the log will no longer restart
+	every time the sigsum role runs.  A few variables have been
+	dropped in the process of refactoring, but no breakage is
+	expected.  See the detailed notes if you want to clean-up your
+	sigsum variables.
 
-The MariaDB backup scripts kept failing once they'd started to fail in
-a particular way. This has now been fixed.
+	Documentation and testing have been improved.  There are now
+	molecule tests that also serve as examples of how to configure
+	a primary-secondary log pair as well as a stand-alone primary
+	that uses the sigsum-agent role and ssh-agent protocol.
 
+	Debian bullseye has reached end of life.  We now target Debian
+	bookworm systems.
 
-v1.1.0
-======
+	Detailed notes:
 
-Release summary
----------------
+	The target environment for running molecule tests have been
+	changed to podman.  Instructions for running the tests have
+	been migrated and improved, see HACKING.
 
-This release adds support for accessing private keys using the ssh-agent
-protocol.  See the new sigsum-agent role for further details on how to use the
-ssh-agent protocol for process separation and private keys backed by YubiHSMs.
+	The distribution that our roles and tests target have been
+	updated from Debian bullseye to Debian bookworm.  Debian
+	bullseye may work but is not tested by us.
 
-This release also adds support for rate-limit configurations.  It is off by
-default, but can be enabled by setting sigsum_allowlist_limit >= 0.  See also
-the related settings sigsum_allowlist_keys and sigsum_allowlist_domains.
+	A role that installs and configures sigsum-agent has been
+	added, see roles/sigsum_agent.  For overview, sigsum-agent is
+	a tiny ssh-agent signing oracle that works with two backends:
+	unencrypted key-file and YubiHSM.  Use of this role is
+	optional, i.e., the sigsum role has only been *extended* to
+	work with configurations that access private keys using the
+	ssh-agent protocol.  A related role for installing the YubiHSM
+	connector has been added, see details in
+	roles/yubihsm_connector.  Use of roles/yubihsm_connector is
+	also optional.
 
-This release comes with some internal refactoring and includes bug fixing.  Most
-notably, the log will no longer restart every time the sigsum role runs.  A few
-variables have been dropped in the process of refactoring, but no breakage is
-expected.  See the detailed notes if you want to clean-up your sigsum variables.
+	Git-clone checkouts of Go tooling (sigsum-go, log-go, and
+	Trillian) have been deprecated.  The required tools are
+	installed directly using Go's tooling.  No action is needed by
+	existing users, but these variables are now ignored:
 
-Documentation and testing have been improved.  There are now molecule tests that
-also serve as examples of how to configure a primary-secondary log pair as well
-as a stand-alone primary that uses the sigsum-agent role and ssh-agent protocol.
+	* sigsum_trillian_srcdir (this directory can be deleted on the target host)
+	* sigsum_trillian_repo
+	* sigsum_lib_srcdir (this directory can be deleted on the target host)
+	* sigsum_lib_repo
+	* sigsum_log_srcdir (this directory can be deleted on the target host)
+	* sigsum_log_repo
 
-Debian bullseye has reached end of life.  We now target Debian bookworm systems.
+	The sigsum role is more idempotent now.  This fixes a bug
+	where the Sigsum log servers would restart every time the role
+	runs, causing unnecessary downtime.
 
-Detailed notes
---------------
+	Diretories and files for the sigsum user are now configured
+	with user-only permissions.  For example, directory
+	permissions were changed from 0755 to 0700.
 
-The target environment for running molecule tests have been changed to podman.
-Instructions for running the tests have been migrated and improved, see HACKING.
+	Documentation of the sigsum role's default variables have been
+	improved significantly.  You are encouraged to take a look in
+	defaults/main.yml.
 
-The distribution that our roles and tests target have been updated from Debian
-bullseye to Debian bookworm.  Debian bullseye may work but is not tested by us.
+	An option to tune Trillian's log verbosity has been added:
 
-A role that installs and configures sigsum-agent has been added, see
-roles/sigsum_agent.  For overview, sigsum-agent is a tiny ssh-agent signing
-oracle that works with two backends: unencrypted key-file and YubiHSM.  Use of
-this role is optional, i.e., the sigsum role has only been *extended* to work
-with configurations that access private keys using the ssh-agent protocol.  A
-related role for installing the YubiHSM connector has been added, see details in
-roles/yubihsm_connector.  Use of roles/yubihsm_connector is also optional.
+	* sigsum_trillian_verbosity
 
-Git-clone checkouts of Go tooling (sigsum-go, log-go, and Trillian) have been
-deprecated.  The required tools are installed directly using Go's tooling.  No
-action is needed by existing users, but these variables are now ignored:
+	The default is WARNING.  This fixes a nit where the system's
+	journal got spammed with INFO output.
 
-* sigsum_trillian_srcdir (this directory can be deleted on the target host)
-* sigsum_trillian_repo
-* sigsum_lib_srcdir (this directory can be deleted on the target host)
-* sigsum_lib_repo
-* sigsum_log_srcdir (this directory can be deleted on the target host)
-* sigsum_log_repo
+	Configuration of rate-limits have been added.  The relevant variables are:
 
-The sigsum role is more idempotent now.  This fixes a bug where the Sigsum log
-servers would restart every time the role runs, causing unnecessary downtime.
+	* sigsum_allowlist_limit
+	* sigsum_allowlist_keys
+	* sigsum_allowlist_domains
 
-Diretories and files for the sigsum user are now configured with user-only
-permissions.  For example, directory permissions were changed from 0755 to 0700.
+	To enable rate limits (off by default), set
+	sigsum_allowlist_limit >= 0.
 
-Documentation of the sigsum role's default variables have been improved
-significantly.  You are encouraged to take a look in defaults/main.yml.
+NEWS for sigsum ansible v1.0.4
 
-An option to tune Trillian's log verbosity has been added:
+	Bumped default log-go version from v0.14.0 to v0.14.1.
 
-* sigsum_trillian_verbosity
+NEWS for sigsum ansible v1.0.3
 
-The default is WARNING.  This fixes a nit where the system's journal got spammed
-with INFO output.
+	Bumped default sigsum-go version from v0.3.4 to v0.6.1.
 
-Configuration of rate-limits have been added.  The relevant variables are:
+	Bumped default log-go version v0.12.0 to v0.14.0.
 
-* sigsum_allowlist_limit
-* sigsum_allowlist_keys
-* sigsum_allowlist_domains
+NEWS for sigsum ansible v1.0.2
 
-To enable rate limits (off by default), set sigsum_allowlist_limit >= 0.
+	Bumped default trillian version from v1.5.1 to v1.5.2.
 
-v1.0.4
-======
+	Bumped default sigsum-lib-go version from v0.1.23 to v0.3.4.
 
-Release Summary
----------------
+	Bumped default sigsum-log-go version from v0.9.0 to v0.12.0.
 
-Bumped default log-go version from v0.14.0 to v0.14.1.
+	Added ``sigsum_witness_config`` option to the
+	``sigsum.ansible.sigsum`` role to enable witness configuration
+	for the primary node.
 
+	Removed the ``sigsum_sth_file`` and
+	``sigsum_trillian_tree_id_file`` options. The directory
+	component of these were not being used, only the filename
+	component. These filenames are now fixed values (``sth`` and
+	``tree-id``).
 
+NEWS for sigsum ansible v1.0.1
 
-v1.0.3
-======
+	Added ``no_log`` options to the ``sigsum.ansible.mariadb``
+	role to hide passwords from showing in the ansible log output.
 
-Release Summary
----------------
+NEWS for sigsum ansible v1.0.0
 
-Bumped default sigsum-go version from v0.3.4 to v0.6.1.
+	This is the first major release of the ``sigsum.ansible``
+	collection. Going forward releases will be versioned according
+	to `SEMVER <https://semver.org/>`_
 
-Bumped default log-go version v0.12.0 to v0.14.0.
+	Breaking Changes:
 
+	* The ``tree-id`` file in deployed installations needs to have
+          ``tree-id=`` prepended the value in the file. If this file
+          is not updated the log will fail to start.
 
-v1.0.2
-======
+	* This can be done by locating the installation path (usually
+          under ``/var/sigsum``), finding the ``tree-id`` files and
+          running the below code or similar.
 
-Release Summary
----------------
+	  	  $ echo "tree-id=$(cat tree-id)" > tree-id
 
-Bumped default trillian version from v1.5.1 to v1.5.2.
+	Changes:
 
-Bumped default sigsum-lib-go version from v0.1.23 to v0.3.4.
+	* ``sigsum_key`` now assumes a string with a OpenSSH formated
+          key is passed. The old variable is preserved with
+          ``sigsum_key_file``.
 
-Bumped default sigsum-log-go version from v0.9.0 to v0.12.0.
+	* ``sigsum_secondary_pubkey`` now assumes a string with an
+            OpenSSH formated public key. The old variable is preserved
+            with ``sigsum_secondary_pubkey_file``.
 
-Added ``sigsum_witness_config`` option to the ``sigsum.ansible.sigsum`` role to enable witness configuration for the primary node.
+	* Rename the following variables
 
-Removed the ``sigsum_sth_file`` and ``sigsum_trillian_tree_id_file`` options. The directory component of these were not being used, only the filename component. These filenames are now fixed values (``sth`` and ``tree-id``).
+	* ``sigsum_rate_limit_config`` to ``sigsum_rate_limit_file``
 
+	* New variables
 
-v1.0.1
-======
+  	* ``sigsum_backend`` to specify the sigsum backend. Currently only takes ``trillian`` as a value.
 
-Release Summary
----------------
+	* ``sigsum_key_file`` takes a file location for the Sigsum key.
 
-Added ``no_log`` options to the ``sigsum.ansible.mariadb`` role to hide passwords from showing in the ansible log output.
+	* ``sigsum_secondary_pubkey_file`` takes a file location for the public key of the secondary node.
 
+	* Removed variables
 
-v1.0.0
-======
+	* ``sigsum_tree_id`` - internal implementation detail
 
-Release Summary
----------------
+	* ``sigsum_ephemeral_test_backend``
 
-This is the first major release of the ``sigsum.ansible`` collection. Going forward releases will be versioned according
-to `SEMVER <https://semver.org/>`_
+	Minor Changes:
 
+	* Dependency updates:
 
-Breaking Changes
-----------------
+	* ``log-go`` updated to ``v0.9.0``
 
-The ``tree-id`` file in deployed installations needs to have ``tree-id=`` prepended the value in the file. If this file is not updated the log will fail to start.
-
-This can be done by locating the installation path (usually under ``/var/sigsum``), finding the ``tree-id`` files and running the below code or similar.
-
-.. code-block:: bash
-
-  $ echo "tree-id=$(cat tree-id)" > tree-id
-
-
-Changes 
--------
-
-
-* ``sigsum_key`` now assumes a string with a OpenSSH formated key is passed. The old variable is preserved with ``sigsum_key_file``.
-
-* ``sigsum_secondary_pubkey`` now assumes a string with an OpenSSH formated public key. The old variable is preserved with ``sigsum_secondary_pubkey_file``.
-
-* Rename the following variables
-
-  * ``sigsum_rate_limit_config`` to ``sigsum_rate_limit_file``
-
-* New variables
-
-  * ``sigsum_backend`` to specify the sigsum backend. Currently only takes ``trillian`` as a value.
-
-  * ``sigsum_key_file`` takes a file location for the Sigsum key.
-
-  * ``sigsum_secondary_pubkey_file`` takes a file location for the public key of the secondary node.
-
-* Removed variables
-
-  * ``sigsum_tree_id`` - internal implementation detail
-
-  * ``sigsum_ephemeral_test_backend``
-
-
-Minor Changes
--------------
-
-* Dependency updates:
-
-  * ``log-go`` updated to ``v0.9.0``
-
-  * ``sigsum-go`` updated to ``v.0.1.23``
+	* ``sigsum-go`` updated to ``v.0.1.23``
