--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-NEWS for sigsum ansible v1.x.y
+NEWS for sigsum ansible v1.5.0
 
 	* Support for monitoring the presence of a YubiHSM device with
           a particular serial number was added.
