In HACKING, suggest molecule-plugins instead of molecule-podman
The https://github.com/ansible-community/molecule-podman repo says
that is is archived and that it has been moved into
molecule-plugins so change to that. This helps avoid some
problems with molecule-podman for more recent ansible versions.

--- a/HACKING
+++ b/HACKING
@@ -9,7 +9,7 @@ Then install molecule using pip in a Python virtual environment
 
     $ python3 -m venv venv
     $ source venv/bin/activate
-    $ pip install molecule molecule-podman
+    $ pip install molecule molecule-plugins
 
 Using a Python virtual environment in this way means that venv/bin is
 added to your PATH environment variable (the "activate" script does
