--- a/NEWS
+++ b/NEWS
@@ -35,6 +35,8 @@ NEWS for sigsum ansible v1.6.0
 	* Removed the litebastion_h2v variable as the corresponding
           flag was removed in litebastion v0.4.0.
 
+	* Bumped community.mysql version from 3.12.0 to 4.0.1
+
 	* Moved molecule tests to extensions directory.
 
 	* Fixed various warnings in molecule tests.
