Mention obscurity mode

--- a/NEWS
+++ b/NEWS
@@ -18,8 +18,13 @@ NEWS for sigsum ansible v1.6.0
 
 	* Added support for litewitness -no-listen flag, which
           prevents litewitness from opening any listening
-          sockets. This should only be used when relying solely on
+          sockets.  This should only be used when relying solely on
           per-log bastions.
+
+	* Added support for toggling obscurity mode for litewitness and
+          litebastion.  When enabled, endpoints such as /logz are
+          disabled to prevent potential information leakage.  See
+          https://github.com/FiloSottile/torchwood/issues/54.
 
 	* Deprecated the variables litewitness_sigsum_log_keys and
           litewitness_vkey_log_keys in favor of litewitness_logs.  The
